# HPC

LinealRegresion/: CMakeLists.txt
LinealRegresion/Extraccion/: extraction.cpp  extraction.h
LinearRegression/: CMakeLists.txt  CMakeLists.txt.user.6c90010  main.cpp
LinearRegression/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  LinealRegresion  build.ninja  cmake_install.cmake
LinearRegression/Debug/.cmake/api/v1/reply/: cache-v2-32122b17d46f4520dafb.json  cmakeFiles-v1-7012b84562d1ee085c59.json  codemodel-v2-d5acd38a0f30c60e298f.json  index-2022-10-10T18-49-50-0370.json  index-2022-10-21T21-47-53-0782.json  target-LinealRegresion-Debug-20bcdcab48b5ecdce0c5.json  target-LinealRegresion-Debug-b868bc8228ba7af5ee11.json
LinearRegression/Debug/.cmake/api/v1/reply.prev/: cache-v2-76f08ae7cf2da01cc2a9.json  cache-v2-ae6aa3d246ad53c96583.json  codemodel-v2-43e5e6b4ad989bbd774c.json  codemodel-v2-ddf45c3ea9bff1b2006f.json  index-2022-10-10T18-49-27-0979.json  index-2022-10-21T21-27-59-0447.json  target-LinealRegresion-Debug-57a08857bc6955caba24.json
LinearRegression/Debug/.qtc_clangd/: compile_commands.json
LinearRegression/Debug/.qtc_clangd/.cache/clangd/index/: __stddef_max_align_t.h.4CC977ED9531DC02.idx  alloc_traits.h.B37F0213D6391980.idx  (+49 more)
LinearRegression/Extraction/: extraction_data.cpp  extraction_data.h
LinearRegression/Regression/: linearregression.cpp  linearregression.h
parcial03/: CMakeLists.txt  HPC_Parcial03_SongData.ipynb  README.md  main.cpp
parcial03/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  parcial03
parcial03/Extraction/: extraction_data.cpp
parcial03/Regression/: linear_regression.cpp  linear_regression.h
(+111 files in other folders)
